# ros

./: .gitignore  README.md  conf.sh
pfield/catkin_ws/install/: .rosinstall  setup.sh
pfield/catkin_ws/install/lib/pkgconfig/: grid_mapper.pc  random_walk.pc
pfield/catkin_ws/install/share/grid_mapper/cmake/: grid_mapperConfig.cmake
pfield/catkin_ws/install/share/random_walk/cmake/: random_walkConfig.cmake
pfield/catkin_ws/src/KarapetyanN/grid_mapper/src/: grid_mapper.cpp
pfield/catkin_ws/src/KarapetyanN/potential_field/: CMakeLists.txt  package.xml
pfield/catkin_ws/src/KarapetyanN/potential_field/src/: potential_field.cpp  potential_field_A.cpp
pfield/catkin_ws/src/KarapetyanN/random_walk/: rwalk.launch
pfield/catkin_ws/src/KarapetyanN/random_walk/src/: random_walk.cpp
rwalk_gmap/catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
rwalk_gmap/catkin_ws/devel/lib/grid_mapper/: grid_mapper
rwalk_gmap/catkin_ws/devel/lib/pkgconfig/: grid_mapper.pc  random_walk.pc  turtle_motions.pc
rwalk_gmap/catkin_ws/devel/lib/random_walk/: random_walk
rwalk_gmap/catkin_ws/devel/lib/turtle_motions/: turtle_motions
rwalk_gmap/catkin_ws/devel/share/grid_mapper/cmake/: grid_mapperConfig.cmake
rwalk_gmap/catkin_ws/devel/share/random_walk/cmake/: random_walkConfig.cmake
rwalk_gmap/catkin_ws/devel/share/turtle_motions/cmake/: turtle_motionsConfig.cmake
rwalk_gmap/catkin_ws/src/KarapetyanN/grid_mapper/src/: grid_mapper.cpp  grid_mapperChanged.cpp
rwalk_gmap/catkin_ws/src/KarapetyanN/random_walk/: CMakeLists.txt
rwalk_gmap/catkin_ws/src/KarapetyanN/turtle_motions/src/: turtle_motions.cpp
rwalk_gmap/catkin_wsn/src/KarapetyanN/random_walk/src/: random_walk.cpp
sim_all/catkin_ws/: helper.note
sim_all/catkin_ws/src/KarapetyanN/grid_mapper/launch/: grid_mapper.launch
sim_all/catkin_ws/src/KarapetyanN/particle filter/src/pf2dlocalizer/: CMakeLists.txt  package.xml
sim_all/catkin_ws/src/KarapetyanN/particle filter/src/pf2dlocalizer/launch/: pf2dlocalizer.launch
sim_all/catkin_ws/src/KarapetyanN/particle filter/src/pf2dlocalizer/maps/amoco_hall/: amoco_hall.pgm  amoco_hall.yaml
sim_all/catkin_ws/src/KarapetyanN/particle filter/src/pf2dlocalizer/src/: main.cpp  pf.cpp  pf.h  pf2dlocalizer.cpp  pf2dlocalizer.h  wpose.cpp  wpose.h
sim_all/catkin_ws/src/KarapetyanN/potential_field/launch/: pt_field.launch
sim_all/catkin_ws/src/KarapetyanN/potential_field/src/: potential_field.cpp
sim_all/catkin_ws/src/KarapetyanN/random_walk/: package.xml
sim_all/catkin_ws/src/KarapetyanN/random_walk/launch/: random_walk.launch
sim_all/catkin_ws/src/KarapetyanN/random_walk/src/: random_walk.cpp
sim_all/catkin_ws/src/training_trials/agitr/: CMakeLists.txt  package.xml
sim_all/catkin_ws/src/training_trials/agitr/src/: hello.cpp  pubvel.cpp  subpose.cpp
sim_all/catkin_ws/src/training_trials/simple_publisher_listener/: CMakeLists.txt  package.xml
sim_all/catkin_ws/src/training_trials/simple_publisher_listener/launch/: start_chatting.launch  start_chatting_py.launch
sim_all/catkin_ws/src/training_trials/simple_publisher_listener/scripts/: listener.py  talker.py
sim_all/catkin_ws/src/training_trials/simple_publisher_listener/src/: listener.cpp  talker.cpp  talker2.cpp
trt_all/catkin_ws/src/KarapetyanN/random_walk/launch/: .random_walk.launch.swp  random_walk.launch
trt_all/catkin_ws/src/KarapetyanN/random_walk/src/: random_walk.cpp
trt_all/catkin_ws/src/KarapetyanN/turtle_motions/: CMakeLists.txt  package.xml
trt_all/catkin_ws/src/KarapetyanN/turtle_motions/launch/: t.launch
trt_all/catkin_ws/src/KarapetyanN/turtle_motions/src/: turtle_motions.cpp
