<package>
  <name>pf2dlocalizer</name>
  <version>0.0.1</version>
  <description>Particle Filter localization using odometry, a map, and laser readings</description>
  <maintainer email="yiannisr@cse.sc.edu">Ioannis Rekleitis</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/localizer</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>random_numbers</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>cmake_modules</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>random_numbers</run_depend>
  <run_depend>tf</run_depend>

</package>


